# medical

./: .gitignore  README.md  pyproject.toml
Readme/核心代码解析/: 01-transformer.py 模型主干.md  高频手撕.md  (+7 more)
configs/: README.md  pretrain_baseline.json  pretrain_full_corpus.json  pretrain_smoke.json  qwen_lora_medical_structured.json  qwen_lora_medical_structured_smoke.json  qwen_lora_structured.json  qwen_lora_structured_smoke.json  sft_baseline.json  sft_lora.json  sft_lora_smoke.json  sft_smoke.json  tokenize_baseline.json  tokenize_full_corpus.json  tokenize_smoke.json  tokenizer_baseline.json  tokenizer_full_clean.json  tokenizer_smoke.json
data/: README.md
eval/: prompts_baseline.json  prompts_instructie.json  prompts_medical_consultation.json  prompts_v1.json
microlm/: __init__.py
results/: kvcache_benchmark.csv  kvcache_benchmark.json
scripts/: 01_normalize.py  02_filter.py  03_quality_tier.py  04_derive_tasks.py  05_stratified_sample.py  06_to_chat_jsonl.py  bench_vllm_local.py  benchmark_kvcache.py  chat.py  check_structured_stability.py  conf.py  export_final_model.py  generate_text.py  medical_01_normalize.py  medical_02_filter.py  medical_03_quality_tier.py  medical_04_derive_tasks.py  medical_05_stratified_sample.py  medical_06_to_chat_jsonl.py  medical_conf.py  prepare_pretrain_jsonl.py  run_eval_prompts.py  run_instructie_eval.py  serve_vllm.sh  smoke_vllm.py  tokenize_corpus.py  train_pretrain.py  train_qwen_lora.py  train_sft.py  train_tokenizer.py
tests/: test_inference.py  test_lora.py  test_model.py  test_sft.py  test_tokenizer.py  test_training.py
(+62 files in other folders)
